header and banner

--- a/index.html
+++ b/index.html
@@ -24,12 +24,43 @@
   <div class="container">
     <!--header section start-->
     <header>
-      
+      <div class="wrapper">
+        <div class="hamburger">
+          <span class="bar fisrt">bar</span>
+          <span class="bar second">bar</span>
+          <span class="bar third">bar</span>
+        </div>
+        <h1><a href="#FIXME"><img src="https://dummyimage.com/186x30/285FAB/fcfcfc&text=Euro+Finance" alt="Logo"></a></h1>
+        <form action="#FIXME" class="search-form">
+           <div>
+            <input type="search" placeholder="search" class="search">
+            <input type="submit" value="Go" class="search-btn">
+           </div>
+        </form>
+        <nav>
+          <ul class="header-nav">
+            <li><a href="#FIXME" title="Home" class="home caps-first color-white">home</a></li>
+            <li><a href="#FIXME" title="News" class="news caps-first color-white">news</a></li>
+            <li><a href="#FIXME" title="Conferences" class="conferences caps-first color-white">conferences</a></li>
+            <li><a href="#FIXME" title="Training" class="training caps-first color-white">training</a></li>
+            <li><a href="#FIXME" title="Awards" class="awards caps-first color-white">awards</a></li>
+            <li><a href="#FIXME" title="About us" class="about caps-first color-white">about us</a></li>
+            <li><a href="#FIXME" title="Treasury Network" class="treasury caps-first color-white">treasury network</a></li>
+            <li><a href="#FIXME" title="Contact us" class="contact caps-first color-white">contact us</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <!--header section start-->
     <!--main section start-->
     <main>
-
+      <div class="banner">
+        <div class="wrapper">
+          <figure><img src="https://dummyimage.com/600x400/285FAB/285FAB" alt="background-image"></figure>
+          <h2 class="signup caps-first-l">signup</h2>
+          <p class="banner-paragraph">get the latest news on our events, exclusive offers and content</p>
+        </div>
+      </div>
     </main>
     <!--main section end-->
 
