footer section style

--- a/index.html
+++ b/index.html
@@ -154,6 +154,65 @@
     <!--footer section start-->
     <footer>
 
+      <div class="footer-top">
+        <div class="wrapper">
+          <div class="footer-one">
+            <div class="logo">
+              <a href="#FIXME"><img src="https://dummyimage.com/186x30/285FAB/fcfcfc&text=Euro+Finance" alt="logo"></a>
+            </div>
+            <p class="caps-first-l">part of <span class="caps-first bold">the economist group</span></p>
+          </div>
+          <div class="footer-two">
+            <h4 class="caps-first">our euroFinance.com</h4>
+            <ul class="footer-nav">
+              <li><a href="#FIXME" title="Home" class="home caps-first color-white">home</a></li>
+              <li><a href="#FIXME" title="News" class="news caps-first color-white">news</a></li>
+              <li><a href="#FIXME" title="Conferences" class="conferences caps-first color-white">conferences</a></li>
+              <li><a href="#FIXME" title="Training" class="training caps-first color-white">training</a></li>
+              <li><a href="#FIXME" title="Awards" class="awards caps-first color-white">awards</a></li>
+              <li><a href="#FIXME" title="About us" class="about caps-first color-white">about us</a></li>
+              <li><a href="#FIXME" title="Treasury Network" class="treasury caps-first color-white">treasury network</a>
+              </li>
+              <li><a href="#FIXME" title="Contact us" class="contact caps-first color-white">contact us</a></li>
+            </ul>
+          </div>
+          <div class="footer-three">
+            <h4 class="caps-first-l">keep updated</h4>
+            <ul class="social-media">
+              <li><a href="#FIXME" class="linkedin" title="Linkedin">linkedin</a></li>
+              <li><a href="#FIXME" class="twitter" title="Twitter">twitter</a></li>
+              <li><a href="#FIXME" class="youtube" title="Youtube">youtube</a></li>
+              <li><a href="#FIXME" class="facebook" title="Facebook">facebook</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      
+      <div class="return-btn">
+        <a class="return" href="#FIXME" title="return">return</a>
+      </div>
+
+      <div class="bottom-footer">
+        <div class="wrapper">
+          <div class="wrapper">
+            <div class="footer-container">
+              <ul class="footer-nav">
+                <li><a href="#FIXME" title="Terms of use">terms of use</a></li>
+                <li><a href="#FIXME" title="Privacy and cookies">privacy and cookies</a>
+                </li>
+                <li><a href="#FIXME" title="Accessibility">accessibility</a></li>
+                <li>
+                  <a href="#FIXME" title="Manage cookie preferences">
+                    manage cookie preferences
+                  </a>
+                </li>
+              </ul>
+              <span class="footer-right">Copyright &copy; 2019 EuroFinance.</span>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </footer>
     <!--footer section end-->
 
