--- a/index.html
+++ b/index.html
@@ -25,14 +25,16 @@
     <!--header section start-->
     <header>
       <div class="wrapper">
-        <div class="hamburger">
-          <span class="bar fisrt">bar</span>
-          <span class="bar second">bar</span>
-          <span class="bar third">bar</span>
+        <div class="header-content">
+          <div class="hamburger">
+            <span class="bar fisrt">bar</span>
+            <span class="bar second">bar</span>
+            <span class="bar third">bar</span>
+          </div>
+          <h1><a href="#FIXME"><img src="https://dummyimage.com/186x30/285FAB/fcfcfc&text=Euro+Finance" alt="Logo"></a>
+          </h1>
+          <form action="#FIXME" class="search-form" method="post">
         </div>
-        <h1><a href="#FIXME"><img src="https://dummyimage.com/186x30/285FAB/fcfcfc&text=Euro+Finance" alt="Logo"></a>
-        </h1>
-        <form action="#FIXME" class="search-form" method="post">
           <div>
             <input type="search" placeholder="search" class="search">
             <input type="submit" value="Go" class="search-btn">
