--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header>
       <div class="wrapper">
         <div class="header-content">
-          <div class="hamburger">
+          <div class="hamburger hidden">
             <span class="bar fisrt">bar</span>
             <span class="bar second">bar</span>
             <span class="bar third">bar</span>
@@ -34,11 +34,9 @@
           <h1><a href="#FIXME"><img src="https://dummyimage.com/186x30/285FAB/fcfcfc&text=Euro+Finance" alt="Logo"></a>
           </h1>
           <form action="#FIXME" class="search-form" method="post">
+              <input type="search" placeholder="search" class="search">
+              <input type="submit" value="Go" class="search-btn">
         </div>
-          <div>
-            <input type="search" placeholder="search" class="search">
-            <input type="submit" value="Go" class="search-btn">
-          </div>
         </form>
         <nav>
           <ul class="header-nav">
@@ -60,7 +58,7 @@
     <main>
       <div class="banner">
         <div class="wrapper">
-          <figure><img src="https://dummyimage.com/600x400/285FAB/285FAB" alt="background-image"></figure>
+          <figure><img src="https://dummyimage.com/600x400/7A98B0/7A98B0" alt="background-image"></figure>
           <h2 class="signup caps-first-l">signup</h2>
           <p class="banner-paragraph">get the latest news on our events, exclusive offers and content</p>
         </div>
