header and banner section style

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   <link rel="shortcut icon" href="favicon.ico" />
   <!--font-awesome link for icons-->
   <link rel="stylesheet" media="screen" href="assets/vendor/font-awesome/css/all.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Quicksand:wght@300;400&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- Default style-sheet is for 'media' type screen (color computer display).  -->
   <link rel="stylesheet" media="screen" href="assets/css/style.css">
@@ -34,8 +38,8 @@
           <h1><a href="#FIXME"><img src="https://dummyimage.com/186x30/285FAB/fcfcfc&text=Euro+Finance" alt="Logo"></a>
           </h1>
           <form action="#FIXME" class="search-form" method="post">
-              <input type="search" placeholder="search" class="search">
-              <input type="submit" value="Go" class="search-btn">
+            <input type="search" placeholder="search" class="search">
+            <input type="submit" value="Go" class="search-btn">
         </div>
         </form>
         <nav>
@@ -58,9 +62,11 @@
     <main>
       <div class="banner">
         <div class="wrapper">
-          <figure><img src="https://dummyimage.com/600x400/7A98B0/7A98B0" alt="background-image"></figure>
-          <h2 class="signup caps-first-l">signup</h2>
-          <p class="banner-paragraph">get the latest news on our events, exclusive offers and content</p>
+          <figure><img src="https://dummyimage.com/600x400/1d479c/1d479c" alt="background-image"></figure>
+          <div class="banner-container">
+            <h2 class="caps-first-l color-white">signup</h2>
+            <p class="caps-first-l">get the latest news on our events, exclusive offers and content</p>
+          </div>
         </div>
       </div>
       <section class="sign-up">
@@ -187,7 +193,7 @@
           </div>
         </div>
       </div>
-      
+
       <div class="return-btn">
         <a class="return" href="#FIXME" title="return">return</a>
       </div>
