main and footer style

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
   <link rel="stylesheet" media="screen" href="assets/vendor/font-awesome/css/all.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=PT+Serif:wght@700&family=Quicksand:wght@300;400&family=Roboto+Slab:wght@100&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mohave&family=Open+Sans:wght@300&family=PT+Serif:wght@700&family=Quicksand:wght@300;400&family=Roboto+Slab:wght@100&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Quicksand:wght@300;400&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -30,7 +36,7 @@
     <header>
       <div class="wrapper">
         <div class="header-content">
-          <div class="hamburger hidden">
+          <div class="hamburger">
             <span class="bar fisrt">bar</span>
             <span class="bar second">bar</span>
             <span class="bar third">bar</span>
@@ -101,7 +107,7 @@
               <div class="form-field">
                 <label for="companyType" class="caps-first">company type</label>
                 <select name="companyType" id="companyType" class="companyType" required>
-                  <option value="select">-select-</option>
+                  <option value="select">- select -</option>
                   <option value="private" class="caps-first">private</option>
                   <option value="cooperative" class="caps-first">cooperative</option>
                 </select>
@@ -110,7 +116,7 @@
               <div class="form-field">
                 <label for="country" class="caps-first">country</label>
                 <select name="country" id="country" class="country" required>
-                  <option value="select">-select-</option>
+                  <option value="select">- select -</option>
                   <option value="india" class="caps-first">india</option>
                   <option value="japan" class="caps-first">japan</option>
                   <option value="africa" class="caps-first">africa</option>
@@ -125,7 +131,7 @@
                 <span class="error-text"></span>
               </div>
               <div class="form-field">
-                <label for="radio">euroFinance is part of The Economist Group. Would you also like to
+                <label for="radio" class="caps-first-l radio-label">euroFinance is part of The Economist Group. Would you also like to
                   receive information on subscription offers, Economist events and other products via
                   email?</label>
                 <div id="radio" class="radio">
@@ -200,7 +206,6 @@
 
       <div class="bottom-footer">
         <div class="wrapper">
-          <div class="wrapper">
             <div class="footer-container">
               <ul class="footer-nav">
                 <li><a href="#FIXME" title="Terms of use">terms of use</a></li>
@@ -215,7 +220,6 @@
               </ul>
               <span class="footer-right">Copyright &copy; 2019 EuroFinance.</span>
             </div>
-          </div>
         </div>
       </div>
 
