main and footer style

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="wrapper">
         <div class="header-content">
           <div class="hamburger">
-            <span class="bar fisrt">bar</span>
+            <span class="bar first">bar</span>
             <span class="bar second">bar</span>
             <span class="bar third">bar</span>
           </div>
@@ -50,15 +50,15 @@
         </form>
         <nav>
           <ul class="header-nav">
-            <li><a href="#FIXME" title="Home" class="home caps-first color-white">home</a></li>
-            <li><a href="#FIXME" title="News" class="news caps-first color-white">news</a></li>
-            <li><a href="#FIXME" title="Conferences" class="conferences caps-first color-white">conferences</a></li>
-            <li><a href="#FIXME" title="Training" class="training caps-first color-white">training</a></li>
-            <li><a href="#FIXME" title="Awards" class="awards caps-first color-white">awards</a></li>
-            <li><a href="#FIXME" title="About us" class="about caps-first color-white">about us</a></li>
-            <li><a href="#FIXME" title="Treasury Network" class="treasury caps-first color-white">treasury network</a>
+            <li><a href="#FIXME" title="Home" class="caps-first color-white">home</a></li>
+            <li><a href="#FIXME" title="News" class="caps-first color-white">news</a></li>
+            <li><a href="#FIXME" title="Conferences" class="caps-first color-white">conferences</a></li>
+            <li><a href="#FIXME" title="Training" class="caps-first color-white">training</a></li>
+            <li><a href="#FIXME" title="Awards" class="caps-first color-white">awards</a></li>
+            <li><a href="#FIXME" title="About us" class="caps-first color-white">about us</a></li>
+            <li><a href="#FIXME" title="Treasury Network" class="caps-first color-white">treasury network</a>
             </li>
-            <li><a href="#FIXME" title="Contact us" class="contact caps-first color-white">contact us</a></li>
+            <li><a href="#FIXME" title="Contact us" class="caps-first color-white">contact us</a></li>
           </ul>
         </nav>
       </div>
