js form validation add

--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
                   receive information on subscription offers, Economist events and other products via
                   email?</label>
                 <div id="radio" class="radio">
-                  <input type="radio" id="yes" name="subscribe" class="subscribe" required>
+                  <input type="radio" id="yes" name="subscribe" class="subscribe" value="yes" required>
                   <label for="yes" class="caps-first">yes</label>
                 </div>
                 <div class="radio">
-                  <input type="radio" id="no" name="subscribe" class="subscribe" required>
+                  <input type="radio" id="no" name="subscribe" class="subscribe" value="no" required>
                   <label for="no" class="caps-first">no</label>
                 </div>
                 <span class="error-text"></span>
