--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
     <main>
       <div class="banner">
         <div class="wrapper">
-          <figure><img src="https://dummyimage.com/600x400/1d479c/1d479c" alt="background-image"></figure>
+          <figure>
+            <img src="https://dummyimage.com/600x400/1d479c/1d479c" alt="background-image">
+          </figure>
           <div class="banner-container">
             <h2 class="caps-first-l color-white">signup</h2>
             <p class="caps-first-l">get the latest news on our events, exclusive offers and content</p>
@@ -82,7 +84,7 @@
             <a href="#FIXME" class="breadcrumb-two caps-first-l">newsletter signup</a>
           </div>
           <h3 class="caps-first-l">enter your details to subscribe to our newsletter</h3>
-          <form action="#FIXME" class="signup-form" method="post">
+          <form action="#FIXME" class="signup-form" target="_self" method="post">
             <div class="form-container">
               <div class="form-field">
                 <label for="name" class="caps-first">first name</label>
