--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
   <link rel="shortcut icon" href="favicon.ico" />
   <!--font-awesome link for icons-->
   <link rel="stylesheet" media="screen" href="assets/vendor/font-awesome/css/all.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=PT+Serif:wght@700&family=Quicksand:wght@300;400&family=Roboto+Slab:wght@100&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mohave&family=Open+Sans:wght@300&family=PT+Serif:wght@700&family=Quicksand:wght@300;400&family=Roboto+Slab:wght@100&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Quicksand:wght@300;400&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- Default style-sheet is for 'media' type screen (color computer display).  -->
   <link rel="stylesheet" media="screen" href="assets/css/style.css">
@@ -27,30 +37,28 @@
       <div class="wrapper">
         <div class="header-content">
           <div class="hamburger">
-            <span class="bar fisrt">bar</span>
+            <span class="bar first">bar</span>
             <span class="bar second">bar</span>
             <span class="bar third">bar</span>
           </div>
           <h1><a href="#FIXME"><img src="https://dummyimage.com/186x30/285FAB/fcfcfc&text=Euro+Finance" alt="Logo"></a>
           </h1>
           <form action="#FIXME" class="search-form" method="post">
-        </div>
-          <div>
             <input type="search" placeholder="search" class="search">
             <input type="submit" value="Go" class="search-btn">
-          </div>
+        </div>
         </form>
         <nav>
           <ul class="header-nav">
-            <li><a href="#FIXME" title="Home" class="home caps-first color-white">home</a></li>
-            <li><a href="#FIXME" title="News" class="news caps-first color-white">news</a></li>
-            <li><a href="#FIXME" title="Conferences" class="conferences caps-first color-white">conferences</a></li>
-            <li><a href="#FIXME" title="Training" class="training caps-first color-white">training</a></li>
-            <li><a href="#FIXME" title="Awards" class="awards caps-first color-white">awards</a></li>
-            <li><a href="#FIXME" title="About us" class="about caps-first color-white">about us</a></li>
-            <li><a href="#FIXME" title="Treasury Network" class="treasury caps-first color-white">treasury network</a>
+            <li><a href="#FIXME" title="Home" class="caps-first color-white">home</a></li>
+            <li><a href="#FIXME" title="News" class="caps-first color-white">news</a></li>
+            <li><a href="#FIXME" title="Conferences" class="caps-first color-white">conferences</a></li>
+            <li><a href="#FIXME" title="Training" class="caps-first color-white">training</a></li>
+            <li><a href="#FIXME" title="Awards" class="caps-first color-white">awards</a></li>
+            <li><a href="#FIXME" title="About us" class="caps-first color-white">about us</a></li>
+            <li><a href="#FIXME" title="Treasury Network" class="caps-first color-white">treasury network</a>
             </li>
-            <li><a href="#FIXME" title="Contact us" class="contact caps-first color-white">contact us</a></li>
+            <li><a href="#FIXME" title="Contact us" class="caps-first color-white">contact us</a></li>
           </ul>
         </nav>
       </div>
@@ -60,9 +68,13 @@
     <main>
       <div class="banner">
         <div class="wrapper">
-          <figure><img src="https://dummyimage.com/600x400/285FAB/285FAB" alt="background-image"></figure>
-          <h2 class="signup caps-first-l">signup</h2>
-          <p class="banner-paragraph">get the latest news on our events, exclusive offers and content</p>
+          <figure>
+            <img src="https://dummyimage.com/600x400/1d479c/1d479c" alt="background-image">
+          </figure>
+          <div class="banner-container">
+            <h2 class="caps-first-l color-white">signup</h2>
+            <p class="caps-first-l">get the latest news on our events, exclusive offers and content</p>
+          </div>
         </div>
       </div>
       <section class="sign-up">
@@ -72,7 +84,7 @@
             <a href="#FIXME" class="breadcrumb-two caps-first-l">newsletter signup</a>
           </div>
           <h3 class="caps-first-l">enter your details to subscribe to our newsletter</h3>
-          <form action="#FIXME" class="signup-form" method="post">
+          <form action="#FIXME" class="signup-form" target="_self" method="post">
             <div class="form-container">
               <div class="form-field">
                 <label for="name" class="caps-first">first name</label>
@@ -97,7 +109,7 @@
               <div class="form-field">
                 <label for="companyType" class="caps-first">company type</label>
                 <select name="companyType" id="companyType" class="companyType" required>
-                  <option value="select">-select-</option>
+                  <option value="select">- select -</option>
                   <option value="private" class="caps-first">private</option>
                   <option value="cooperative" class="caps-first">cooperative</option>
                 </select>
@@ -106,7 +118,7 @@
               <div class="form-field">
                 <label for="country" class="caps-first">country</label>
                 <select name="country" id="country" class="country" required>
-                  <option value="select">-select-</option>
+                  <option value="select">- select -</option>
                   <option value="india" class="caps-first">india</option>
                   <option value="japan" class="caps-first">japan</option>
                   <option value="africa" class="caps-first">africa</option>
@@ -118,18 +130,18 @@
                 <label for="workemail" class="caps-first">workemail</label>
                 <input type="email" id="workemail" name="workemail" class="workemail" placeholder="monilv@prdxn.com"
                   required>
-                <span class="error-text"></span>
+                  <span class="error-text"></span>
               </div>
               <div class="form-field">
-                <label for="radio">euroFinance is part of The Economist Group. Would you also like to
+                <p class="caps-first-l radio-label">euroFinance is part of The Economist Group. Would you also like to
                   receive information on subscription offers, Economist events and other products via
-                  email?</label>
+                  email?</p>
                 <div id="radio" class="radio">
-                  <input type="radio" id="yes" name="subscribe" class="subscribe" required>
+                  <input type="radio" id="yes" name="subscribe" class="subscribe" value="yes" required>
                   <label for="yes" class="caps-first">yes</label>
                 </div>
                 <div class="radio">
-                  <input type="radio" id="no" name="subscribe" class="subscribe" required>
+                  <input type="radio" id="no" name="subscribe" class="subscribe" value="no" required>
                   <label for="no" class="caps-first">no</label>
                 </div>
                 <span class="error-text"></span>
@@ -189,14 +201,13 @@
           </div>
         </div>
       </div>
-      
+
       <div class="return-btn">
         <a class="return" href="#FIXME" title="return">return</a>
       </div>
 
       <div class="bottom-footer">
         <div class="wrapper">
-          <div class="wrapper">
             <div class="footer-container">
               <ul class="footer-nav">
                 <li><a href="#FIXME" title="Terms of use">terms of use</a></li>
@@ -211,7 +222,6 @@
               </ul>
               <span class="footer-right">Copyright &copy; 2019 EuroFinance.</span>
             </div>
-          </div>
         </div>
       </div>
 
