--- a/index.html
+++ b/index.html
@@ -89,18 +89,22 @@
               <div class="form-field">
                 <label for="name" class="caps-first">first name</label>
                 <input type="text" id="name" name="name" class="name" required>
+                <span class="error-text"></span>
               </div>
               <div class="form-field">
                 <label for="lastName" class="caps-first">last name</label>
                 <input type="text" id="lastName" name="lastName" class="lastName" required>
+                <span class="error-text"></span>
               </div>
               <div class="form-field">
                 <label for="position" class="caps-first">position</label>
                 <input type="text" id="position" name="position" class="position" required>
+                <span class="error-text"></span>
               </div>
               <div class="form-field">
                 <label for="company" class="caps-first">company</label>
                 <input type="text" id="company" name="company" class="company" required>
+                <span class="error-text"></span>
               </div>
               <div class="form-field">
                 <label for="companyType" class="caps-first">company type</label>
@@ -109,6 +113,7 @@
                   <option value="private" class="caps-first">private</option>
                   <option value="cooperative" class="caps-first">cooperative</option>
                 </select>
+                <span class="error-text"></span>
               </div>
               <div class="form-field">
                 <label for="country" class="caps-first">country</label>
@@ -119,16 +124,18 @@
                   <option value="africa" class="caps-first">africa</option>
                   <option value="russia" class="caps-first">russia</option>
                 </select>
+                <span class="error-text"></span>
               </div>
               <div class="form-field">
                 <label for="workemail" class="caps-first">workemail</label>
                 <input type="email" id="workemail" name="workemail" class="workemail" placeholder="monilv@prdxn.com"
                   required>
+                  <span class="error-text"></span>
               </div>
               <div class="form-field">
-                <label for="radio" class="caps-first-l radio-label">euroFinance is part of The Economist Group. Would you also like to
+                <p class="caps-first-l radio-label">euroFinance is part of The Economist Group. Would you also like to
                   receive information on subscription offers, Economist events and other products via
-                  email?</label>
+                  email?</p>
                 <div id="radio" class="radio">
                   <input type="radio" id="yes" name="subscribe" class="subscribe" value="yes" required>
                   <label for="yes" class="caps-first">yes</label>
@@ -137,6 +144,7 @@
                   <input type="radio" id="no" name="subscribe" class="subscribe" value="no" required>
                   <label for="no" class="caps-first">no</label>
                 </div>
+                <span class="error-text"></span>
               </div>
               <div class="form-field">
                 <p class="signoff-info">
