--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
       <section class="sign-up">
         <div class="wrapper">
           <div class="breadcrumb">
-            <a href="#FIXME" class="breadcrumb-one caps-first">euroFinance</a>
-            <a href="#FIXME" class="breadcrumb-two caps-first-l">newsletter signup</a>
+            <a href="#FIXME" class="breadcrumb-one caps-first" title="EuroFinance">euroFinance</a>
+            <a href="#FIXME" class="breadcrumb-two caps-first-l" title="Newsletter Signup">newsletter signup</a>
           </div>
           <h3 class="caps-first-l">enter your details to subscribe to our newsletter</h3>
           <form action="#FIXME" class="signup-form" target="_self" method="post">
