--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <p class="signoff-info">
                   The Economist Group is a global organisation and operates a strict privacy policy
                   around the world. You can view our privacy policy at
-                  <a href="#FIXME" title="Privacy policy">
+                  <a href="#FIXME" title="Privacy policy" class="privacy-link">
                     www.economistgroup.com/privacy
                   </a>
                 </p>
